--- a/gestor-bearmax/package.json
+++ b/gestor-bearmax/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^13.5.0",
     "date-fns": "^3.6.0",
     "firebase": "^10.11.1",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "react": "^18.3.1",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.3.1",
